==> BitFu2015/CAFrame/STM32F1/drv/serial.c <==
#include "caframe.h"
#define UART1_BAUD 9600
#define UART1_BUF_SIZE 128
#define UART1_TX_SEL  GPIO_SetBits(GPIOB , GPIO_Pin_5)
#define UART1_RX_SEL  GPIO_ResetBits(GPIOB,GPIO_Pin_5)

void Uart1Init(void)
{
	USART_InitTypeDef USART_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;
		
	QueueCreate(&xRxQueue1,g_Uart1RxBuf,UART1_BUF_SIZE);
	QueueCreate(&xTxQueue1,g_Uart1TxBuf,UART1_BUF_SIZE);

	// Enable USART1 clock
	RCC_APB2PeriphClockCmd( RCC_APB2Periph_USART1, ENABLE );	
	
	//引脚重新映射
	GPIO_PinRemapConfig(GPIO_Remap_USART1,ENABLE);

	// Configure USART1 Rx (PB7) as input floating
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
	GPIO_Init( GPIOB, &GPIO_InitStructure );
	
	// Configure USART1 Tx (PB6) as alternate function push-pull 
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init( GPIOB, &GPIO_InitStructure );
	
	//485方向端口
	GPIO_InitStructure.GPIO_Pin=GPIO_Pin_5;
	GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	UART1_RX_SEL;
	
	USART_InitStructure.USART_BaudRate = UART1_BAUD;
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No ;
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
	USART_Init( USART1, &USART_InitStructure );
	
	USART_ITConfig( USART1, USART_IT_RXNE, ENABLE );  	//接收中断使能
	
	NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = DEFAULT_INT_PRIORITY;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init( &NVIC_InitStructure );
	
	USART_Cmd( USART1, ENABLE );
}

void Uart1Send(uint8_t *buf,int len)
{
		uint32_t i;
	
	for(i=0;i<len;i++)
		 QueueInput( &xTxQueue1, buf[i]);	

	UART1_TX_SEL;
	USART_ITConfig(USART1, USART_IT_TXE, ENABLE );	//中断使能
	g_Uart1SendFlag=0;
	i=GetCurrentTick();
	while(g_Uart1SendFlag==0)
	{
		if(GetPassedTick(i)>1000)
		{
			Uart1Init();
			break;
		}	
	}
	UART1_RX_SEL;
}

void Uart1Post(uint8_t *buf,int len)
{
	uint32_t i;

	for(i=0;i<len;i++)
		QueueInput( &xTxQueue1, buf[i]);	

	UART1_TX_SEL;
	USART_ITConfig(USART1, USART_IT_TXE, ENABLE );	//中断使能	
}

void USART1_IRQHandler( void )
{
	uint8_t cChar;

	if(USART_GetITStatus( USART1, USART_IT_TXE ) == SET )
	{
		if(QueueGetSize(&xTxQueue1))
			USART_SendData(USART1,QueueOutputFromISR(&xTxQueue1));
		else
		{
			USART_ITConfig(USART1, USART_IT_TXE, DISABLE ); //关闭发送中断		
			USART_ITConfig(USART1, USART_IT_TC,ENABLE);	//打开发送完成中断
		}			
	}

	if(USART_GetITStatus( USART1, USART_IT_TC ) == SET)
	{
		g_Uart1SendFlag=1;
		USART_ITConfig(USART1, USART_IT_TC,DISABLE);
		UART1_RX_SEL;
	}	
	
	if(USART_GetITStatus( USART1, USART_IT_RXNE ) == SET )
	{
		cChar = USART_ReceiveData( USART1 );
		QueueInputFromISR( &xRxQueue1, cChar);
		g_Uart1RecvFlag=1; //进入接收数据包状态
	}	
}

void Uart2Init(void)
{
	USART_InitTypeDef USART_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;
	
	QueueCreate(&xRxQueue2,g_Uart2RxBuf,UART2_BUF_SIZE-2);
	QueueCreate(&xTxQueue2,g_Uart2TxBuf,UART2_BUF_SIZE-2);

	//外设时钟和IO引脚初始化
	RCC_APB1PeriphClockCmd( RCC_APB1Periph_USART2, ENABLE );	

	//Configure USART2 Rx (PA3) as input floating 
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
	GPIO_Init( GPIOA, &GPIO_InitStructure );
	
	//Configure USART2 Tx (PA2) as alternate function push-pull
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init( GPIOA, &GPIO_InitStructure );
	
	//485方向端口
	GPIO_InitStructure.GPIO_Pin=GPIO_Pin_0;
	GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	UART2_RX_SEL;

	//中断设置
	NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn;

	USART_InitStructure.USART_BaudRate = UART2_BAUD;
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No ;
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
	USART_Init( USART2, &USART_InitStructure );
	
	USART_ITConfig( USART2, USART_IT_RXNE, ENABLE );  	//接收中断使能
	
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority =DEFAULT_INT_PRIORITY;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init( &NVIC_InitStructure );
	
	USART_Cmd( USART2, ENABLE );
}

void Uart2Send(uint8_t *buf,int len)
{
	uint32_t i;
	
	for(i=0;i<len;i++)
		 QueueInput( &xTxQueue2, buf[i]);	

	USART_ITConfig(USART2, USART_IT_TXE, ENABLE );	//中断使能
	g_Uart2SendFlag=0;
	i=GetCurrentTick();
	while(g_Uart2SendFlag==0)
	{
		if(GetPassedTick(i)>1000)
		{
			Uart2Init();
			break;
		}	
	}
}

void Uart2Post(uint8_t *buf,int len)
{
	int i;

	for(i=0;i<len;i++)
		 QueueInput(&xTxQueue2, buf[i]);
	
	USART_ITConfig( USART2, USART_IT_TXE, ENABLE );	//中断使能
}

void USART2_IRQHandler( void )
{
	uint8_t cChar;

	if( USART_GetITStatus( USART2, USART_IT_TXE ) == SET )
	{
		if(QueueGetSize(&xTxQueue2) )
			USART_SendData( USART2,QueueOutputFromISR(&xTxQueue2));
		else
		{
			USART_ITConfig( USART2, USART_IT_TXE, DISABLE );
			g_Uart2SendFlag=1;
		}
	}
	
	if( USART_GetITStatus( USART2, USART_IT_RXNE) == SET )
	{
		cChar = USART_ReceiveData( USART2 );
		QueueInputFromISR(&xRxQueue2, cChar);	
		g_Uart2RecvFlag=1; //进入接收数据包状态
	}	
}

void Uart3Init(void)
{
	USART_InitTypeDef USART_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;

	QueueCreate(&xRxQueue3,g_Uart3RxBuf,UART3_BUF_SIZE);
	QueueCreate(&xTxQueue3,g_Uart3TxBuf,UART3_BUF_SIZE);

	//Enable clock 
	RCC_APB1PeriphClockCmd( RCC_APB1Periph_USART3, ENABLE );	

	//Configure USART3 Rx (PB11) as input floating 
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
	GPIO_Init( GPIOB, &GPIO_InitStructure );
	
	//Configure USART3 Tx (PB10) as alternate function push-pull
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init( GPIOB, &GPIO_InitStructure );
	
	//485方向端口
	GPIO_InitStructure.GPIO_Pin=GPIO_Pin_2;
	GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	UART3_RX_SEL;

	//中断设置
	NVIC_InitStructure.NVIC_IRQChannel = USART3_IRQn;

	USART_InitStructure.USART_BaudRate = UART3_BAUD;
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No ;
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
	
	USART_Init( USART3, &USART_InitStructure );
	
	USART_ITConfig( USART3, USART_IT_RXNE, ENABLE );	//接收中断使能
	
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = DEFAULT_INT_PRIORITY;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init( &NVIC_InitStructure );
	
	USART_Cmd( USART3, ENABLE );
}

void Uart3Send(uint8_t *buf,int len)
{
	uint32_t i;
	
	for(i=0;i<len;i++)
		 QueueInput( &xTxQueue3, buf[i]);	

	USART_ITConfig(USART3, USART_IT_TXE, ENABLE );	//中断使能
	g_Uart3SendFlag=0;
	i=GetCurrentTick();
	while(g_Uart3SendFlag==0)
	{
		if(GetPassedTick(i)>1000)
		{
			Uart3Init();
			break;
		}	
	}
}

void Uart3Post(uint8_t *buf,int len)
{
	uint32_t i;
	
	for(i=0;i<len;i++)
		 QueueInput( &xTxQueue3, buf[i]);	
	USART_ITConfig(USART3, USART_IT_TXE, ENABLE );	//中断使能
}

void USART3_IRQHandler(void)
{
	uint8_t cChar;

	if(USART_GetITStatus( USART3, USART_IT_TXE ) == SET)
	{
		if(QueueGetSize(&xTxQueue3))
			USART_SendData( USART3, QueueOutputFromISR(&xTxQueue3));
		else
		{
			USART_ITConfig(USART3, USART_IT_TXE, DISABLE);
			g_Uart3SendFlag=1;
		}			
	}
	
	if( USART_GetITStatus( USART3, USART_IT_RXNE ) == SET )
	{
		cChar = USART_ReceiveData( USART3 );
		QueueInputFromISR( &xRxQueue3, cChar);
		g_Uart3RecvFlag=1; //进入接收数据包状态
	}	
}

void TIM3_IRQHandler(void)
{	
	TIM_ClearITPendingBit(TIM3, TIM_IT_Update);	

	if((g_Uart1RecvFlag > 0 )&&(g_Uart1RecvFlag<6))
	{
		if(++g_Uart1RecvFlag >=6)
			frm_set_event(EVENT_UART1_ID);
	}
	

	if((g_Uart2RecvFlag > 0 )&&(g_Uart2RecvFlag<6))
	{
		if(++g_Uart2RecvFlag>=6)
			frm_set_event(EVENT_UART2_ID);
	}

	if((g_Uart3RecvFlag > 0 )&&(g_Uart3RecvFlag<6))
	{
			if(++g_Uart3RecvFlag >= 6)
				frm_set_event(EVENT_UART3_ID);
	}		
}
